--- a/src/App.css
+++ b/src/App.css
@@ -159,3 +159,7 @@ h1, h2, h3, h4 {
 .btn-fechar-modal:hover {
   background: #d43145 !important;
 }
+@keyframes fadeInDown {
+  from { opacity: 0; transform: translateY(-24px);}
+  to   { opacity: 1; transform: translateY(0);}
+}
